create internal pkg and move everything into it
